fix: overflow block

--- a/scss/_block.scss
+++ b/scss/_block.scss
@@ -6,6 +6,8 @@ html {
 
   .block {
 
+    overflow-y: auto;
+
     pre{
       border-radius: 0;
     }
